--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.4.0",
     "autoprefixer": "^9.8.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.20.0",
